<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.oilsite.analyzer.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_camera"
            app:destination="@id/cameraFragment" />

        <action
            android:id="@+id/action_home_to_analysis"
            app:destination="@id/analysisFragment" />

        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.oilsite.analyzer.ui.camera.CameraFragment"
        android:label="@string/camera_title"
        tools:layout="@layout/fragment_camera">

        <action
            android:id="@+id/action_camera_to_analysis"
            app:destination="@id/analysisFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/analysisFragment"
        android:name="com.oilsite.analyzer.ui.analysis.AnalysisFragment"
        android:label="@string/analysis_title"
        tools:layout="@layout/fragment_analysis">

        <argument
            android:name="imageUri"
            app:argType="string" />

        <action
            android:id="@+id/action_analysis_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.oilsite.analyzer.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
